# Take-Home-Assessment

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
account-service/: Dockerfile  pyproject.toml
account-service/account_service/: config.py  db.py  logging_config.py  main.py  models.py  schemas.py
account-service/account_service/routers/: accounts.py  health.py
account-service/account_service/services/: transaction_service.py
account-service/tests/: conftest.py
account-service/tests/integration/: test_account_details.py  test_apply_transaction.py  test_balance.py  test_health.py  test_idempotency.py
gateway-service/: .dockerignore  Dockerfile  pyproject.toml
gateway-service/gateway_service/: config.py  db.py  main.py  metrics.py  models.py  schemas.py
gateway-service/gateway_service/clients/: account_client.py
gateway-service/gateway_service/middleware/: trace.py
gateway-service/gateway_service/routers/: events.py  health.py  metrics.py
gateway-service/gateway_service/services/: event_service.py
gateway-service/tests/: conftest.py
gateway-service/tests/integration/: test_gateway_health.py  test_gateway_idempotency.py  test_get_events.py  test_post_events.py  test_resiliency.py  test_trace.py  test_validation.py
scripts/: docker-down.sh  docker-up.sh
tests/integration/: conftest.py  test_full_flow.py  test_graceful_degradation.py  test_idempotency_e2e.py  test_out_of_order.py  test_trace_propagation.py  test_validation_e2e.py
