[project]
name = "event-ledger"
version = "0.1.0"
description = "Event Ledger take-home project"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = [
    "account-service/tests",
    "gateway-service/tests",
    "tests",
]
pythonpath = []
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
